--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ series_note: "Propaganda de Instrução para Portuguezes e Brazileiros\r\nBiblio
 subjects:
 - !lcsh 'History, Ancient'
 - !lcc 'D'
+- GITenberg
 tableOfContents: Introducção; Capitulo I - Os hebreus; Capitulo II - Os egypcios;
   Capitulo III - Os assyrios e babylonios; Capitulo IV - Os phenicios; Capitulo V
   - Os carthaginezes; Capitulo VI - Os syrios; Capitulo VII – Os persas; Capitulo
